--- a/client/src/style.css
+++ b/client/src/style.css
@@ -41,4 +41,20 @@
     right: 0;
   }
 
+.login-menu {
+    visibility: hidden;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    background-color: white;
+    height: 100%;
+    width: 470px;
+    z-index: 1000; 
+}
+
+.login-open .login-menu {
+    visibility: visible;
+    left: 0;
+  }
+
   
