--- a/client/src/style.css
+++ b/client/src/style.css
@@ -17,7 +17,8 @@
     display: inline-flex;
     justify-content: flex;
     flex-direction: row;
-    padding-left: 900px;
+    flex-grow: 1;
+    /* padding-left: 900px; */
 }
 
 .navbar > ul > li {
